1.0.9: Tell Me If You've Heard This One Before

hey look, another capital battlecarrier and a funky LRM ship. these ones are different, I promise (by "different" I mean "probably overpowered")

New:
Ships:
- Sonora-class Siege Carrier: A heavy frontline carrier designed for bombarding stations and other heavy combatants. Has a pair of built-in Ultrachromatic Pulse Cannons for anti-station duties. Comes with Networked Targeting Array and Fleet Support Gantry as built-in hullmods. System: Defense Optimization Uplink; improves the armor and shields of nearby allies but prevents hard flux dissipation while active.
- Tuatara-class (LRM) Missile Destroyer: Equipped with a Thundercloud SLRM Launcher, which delivers a large spread of mines. Ammo types are swappable between frag, HE, and kinetic through a hullmod, like the Crocodile. System: Arcmine Dispenser.

Hullmods: 
- Networked Targeting Array: Shares the ship's range bonuses with its strikecraft, but decreases their engagement range. Increases the base range of the ship's small and medium weapons based on how much OP was spent on fighters. Great for larger battlecarriers, but can be very OP-expensive to take full advantage of.

Changes:
- Faction: Reduced fleet size (5 -> 4)- they had one point too many in faction doctrine settings.
- Crocodile: Taipan VLS pods now correctly reset if the ship vents or overloads during the firing sequence. (thanks amazigh)
- Python: Increased system uptime by 0.5 seconds and redid the math to ensure that fast projectiles get the proper benefit from the system. Fixed recursive splitting issues with ED Shipyards, Gensoukyou, and ApproLight weapons when using the ship's system.
- Gecko: Weapons now deal 25 extra energy damage on hit, helping out against shielded or armored fighters that could shrug off the frag damage.