@@ -45,7 +45,7 @@
 					"slowToMaxSpeed":true,
 					"delay":1.4,
 					"pingSound":"mine_ping",
-					"pingColor":[75, 192, 255,255],
+					"pingColor":[75, 192, 255,128],
 					"pingRadius":100,
 					"pingDuration":0.15,
 					"windupSound":"apex_mine_windup",
@@ -58,10 +58,10 @@
 									 "particleSizeMin":3.0,
 									 "particleSizeRange":8.0,
 									 "particleDuration":2,
-									 "particleCount":10,
+									 "particleCount":0,
 									 "particleColor":[75, 192, 255, 128],
 									 "explosionColor":[75, 192, 255, 128],
-									 "useDetailedExplosion":true,
+									 "useDetailedExplosion":false,
 									 "sound":"devastator_explosion"},
 					}	
 }
